# speechmatching

./: .dockerignore  .gitignore  .zenodo.json  CHANGELOG.rst  CITATION.bib  Dockerfile  README.rst  init_models.py
.github/workflows/: sphinx.yml
acoustic/: CHANGELOG.rst  CMakeLists.txt  README.rst  acoustic.cpp
docs/source/: acoustic_changelog.rst  acoustic_readme.rst  changelog.rst  conf.py  example_basic.rst  example_experiments.rst  example_telegram.rst  index.rst  readme.rst  speechmatching.audio.rst  speechmatching.config.rst  speechmatching.match.rst  speechmatching.model.rst  speechmatching.recording.rst  speechmatching.rst  speechmatching.utils.rst
examples/basic/: .dockerignore  README.rst  main.py  requirements.txt
examples/experiments/: .gitignore  README.rst  final.ipynb  requirements.txt
examples/telegram-bot/: .gitignore  Dockerfile  README.rst  env.list.CHANGEME  main.py  requirements.txt
speechmatching/: audio.py  config.py  match.py  model.py  recording.py
